--- a/templates/bookmarks.html
+++ b/templates/bookmarks.html
@@ -160,7 +160,7 @@
                 <a href="/summary" class="btn btn-outline-primary">
                     <i class="bi bi-file-text"></i> 所有摘要
                 </a>
-                <a href="{{ url_for('index') }}" class="btn btn-secondary">返回主頁</a>
+                <a href="{{ url_for('main.index') }}" class="btn btn-secondary">返回主頁</a>
             </div>
         </div>
 
@@ -257,7 +257,7 @@
                         <i class="bi bi-bookmark"></i>
                         <h4>還沒有書籤</h4>
                         <p>您可以在摘要列表中點擊書籤按鈕來收藏重要的摘要</p>
-                        <a href="{{ url_for('list_summaries') }}" class="btn btn-primary">查看所有摘要</a>
+                        <a href="{{ url_for('main.list_summaries') }}" class="btn btn-primary">查看所有摘要</a>
                     </div>
                 {% endif %}
             </div>
