--- a/templates/summaries.html
+++ b/templates/summaries.html
@@ -101,7 +101,7 @@
                 <a href="/bookmarks" class="btn btn-outline-secondary nav-bookmark-solid">
                     <i class="bi bi-bookmark-fill"></i> 書籤
                 </a>
-                <a href="{{ url_for('index') }}" class="btn btn-secondary">返回主頁</a>
+                <a href="{{ url_for('main.index') }}" class="btn btn-secondary">返回主頁</a>
             </div>
         </div>
 
@@ -169,7 +169,7 @@
                         <i class="bi bi-file-text"></i>
                         <h4>沒有摘要紀錄</h4>
                         <p>目前沒有任何摘要檔案</p>
-                        <a href="{{ url_for('index') }}" class="btn btn-primary">開始處理音訊</a>
+                        <a href="{{ url_for('main.index') }}" class="btn btn-primary">開始處理音訊</a>
                     </div>
                 {% endif %}
             </div>
