--- a/templates/trash.html
+++ b/templates/trash.html
@@ -94,7 +94,7 @@
                         <a href="/summary" class="btn btn-outline-primary">
                             <i class="bi bi-file-text"></i> 摘要列表
                         </a>
-                        <a href="{{ url_for('index') }}" class="btn btn-secondary">返回主頁</a>
+                        <a href="{{ url_for('main.index') }}" class="btn btn-secondary">返回主頁</a>
                     </div>
                 </div>
 
