--- a/templates/admin_login_attempts.html
+++ b/templates/admin_login_attempts.html
@@ -17,7 +17,7 @@
     <div class="container mt-5">
         <div class="d-flex justify-content-between align-items-center mb-4">
             <h1 class="h3">登入嘗試管理</h1>
-            <a href="{{ url_for('index') }}" class="btn btn-secondary">返回主頁</a>
+            <a href="{{ url_for('main.index') }}" class="btn btn-secondary">返回主頁</a>
         </div>
 
         <div class="row mb-4">
